[package]
name = "ismp-solidity-test"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Polytope Labs"]


[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full", "solc-tests"], rev = "80ac394" }
json = { version = "1.0.94", package = "serde_json" }

[dependencies]
forge = { git = "https://github.com/foundry-rs/foundry", rev = "6570a4cafef568922a856eef65853642b01e099d" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "6570a4cafef568922a856eef65853642b01e099d" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "6570a4cafef568922a856eef65853642b01e099d" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "6570a4cafef568922a856eef65853642b01e099d" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full", "solc-tests"], rev = "80ac394" }
once_cell = "1.17.0"
hex-literal = "0.3.4"
rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "seun/2d-merkle-proofs" }
hex = "0.4.3"
merkle-mountain-range = { package = "ckb-merkle-mountain-range", git = "https://github.com/polytope-labs/merkle-mountain-range", branch = "seun/simplified-mmr" }
trie-db = "0.24.0"
patricia-merkle-trie = { git = "https://github.com/polytope-labs/patricia-merkle-trie", branch = "main" }
primitive-types = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.2.2" }
sp-core = "17.0.0"
sp-runtime = "17.0.0"
sp-trie = "17.0.0"
libfuzzer-sys = "0.4.6"
futures = "0.3.27"
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
tokio = { version = "1.17.0", features = ["full"] }
beefy-prover = { git = "https://github.com/polytope-labs/beefy", branch = "seun/polkadot-v0.9.38" }
beefy-verifier-primitives = { git = "https://github.com/polytope-labs/beefy", branch = "seun/polkadot-v0.9.38" }
beefy-primitives = { package = "sp-beefy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
