[package]
name = "ismp-solidity-test"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Polytope Labs"]

[dependencies]
# crates.io
once_cell = "1.17.0"
hex-literal = "0.4.1"
hex = "0.4.3"
trie-db = "0.24.0"
primitive-types = "0.12.1"
codec = { package = "parity-scale-codec", version = "3.2.2" }
sp-core = "17.0.0"
anyhow = "1.0.72"
sp-runtime = "17.0.0"
sp-trie = "17.0.0"
libfuzzer-sys = "0.4.6"
futures = "0.3.27"
bytes = "1.4.0"
subxt = { version = "0.30.1", features = ["substrate-compat"] }
tokio = { version = "1.17.0", features = ["macros"] }
# rust-evm tools
forge = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "25d3ce7ca1eed4a9f1776103185e4221e8fa0a11" }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ethers-solc"] }
# polytope-labs
merkle-mountain-range-labs = { package = "ckb-merkle-mountain-range", git = "https://github.com/polytope-labs/merkle-mountain-range", branch = "seun/simplified-mmr" }
merkle-mountain-range = { package = "ckb-merkle-mountain-range", version = "0.5.2"}

rs_merkle = { git = "https://github.com/polytope-labs/rs-merkle", branch = "seun/2d-merkle-proofs" }
ismp-evm = { git = "https://github.com/polytope-labs/ismp-substrate", branch = "main" }
ismp-primitives = { git = "https://github.com/polytope-labs/ismp-substrate", branch = "main" }
ismp = { git = "https://github.com/polytope-labs/ismp-rs", branch = "main" }
#beefy-prover = { git = "https://github.com/polytope-labs/beefy", branch = "seun/polkadot-v0.9.42" }
#beefy-verifier-primitives = { git = "https://github.com/polytope-labs/beefy", branch = "seun/polkadot-v0.9.42" }
## substrate
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
